--- a/src/App.css
+++ b/src/App.css
@@ -357,15 +357,15 @@ h2 {
 }
 .portfolio--section--card {
   display: flex;
+  padding: 32px;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
   flex: 1 0 0;
-  background: #fff;
-  box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
-  cursor: pointer;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  border-radius: 10.6px;
+  background: var(--bg-shade);
+  min-height: 250px;
+
 }
 .portfolio--section--card--content {
   display: flex;
@@ -387,7 +387,7 @@ h2 {
   font-weight: 600;
 }
 .portfolio--section--card:hover path {
-  stroke: #006b6a;
+  stroke: yellowgreen;
 }
 /* Portfolio Ends */
 
@@ -488,7 +488,7 @@ select {
 
 .experience--section {
   display: flex;
-  padding: 112px 85px;
+  padding: 90px 85px;
   flex-direction: column;
   align-items: flex-start;
   gap: 80px;
@@ -510,26 +510,46 @@ select {
 }
 .experience--section--card
 {
+
+
   display: flex;
+  padding: 32px;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
   flex: 1 0 0;
-  background: #fff;
-  box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
-  cursor: pointer;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  border-radius: 10.6px;
+  background: var(--bg-shade);
+  min-height: 250px;
+
 }
-.experience--section--card:hover path
-{
-  stroke: #006b6a;
+
+.experience--section--card:hover {
+  border-bottom: 4px solid var(--primary);
 }
 .experience--section--heading {
   color: var(--heading-color);
   font-size: 34px;
   font-weight: 700;
   line-height: 90px;
+}
+.experience--section--img
+{
+  display: flex;
+  margin: 15px;
+  align-items: center;
+  border-radius: 10.6px;
+  background: none;
+  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.1);
+}
+.experience--section--img > img
+{
+  width: 100%;
+ 
+ 
+
+
+ 
 }
 .experience--section--card--content
 {
@@ -798,12 +818,14 @@ input[type="checkbox"] {
     width: 100%;
     padding: 3rem 0 0.6rem;
     z-index: -100;
+    
   }
   .navbar--items ul li {
     text-align: center;
   }
   .navbar--items ul li a {
     padding: 0.5rem;
+  
   }
   .navbar--items {
     z-index: -1000;
